--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-CBSE 04 Automarkt/TestApp/bin/x86/Debug/*
+CBSE 04 Automarkt/TestApp/bin/*
+CBSE 04 Automarkt/TestApp/obj/*
+CBSE 04 Automarkt/TestApp/Properties/Settings.settings
+CBSE 04 Automarkt/.vs/
