--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,12 @@
 ##
 ## Get latest from https://github.com/github/gitignore/blob/master/VisualStudio.gitignore
 
+# Wir machen:
+*.cache
+*Settings.settings
+*Settings.Designer.cs
+*App.config
+
 # User-specific files
 *.suo
 *.user
