irgendwas von visual studio

--- a/UnserePL/KioskWarenVerwaltung/CompData/CompData.csproj
+++ b/UnserePL/KioskWarenVerwaltung/CompData/CompData.csproj
@@ -63,8 +63,8 @@
     <Compile Include="AData.cs" />
     <Compile Include="ADataAccess.cs" />
     <Compile Include="Access\CFactoryCDataAccess.cs" />
+    <Compile Include="Access\CData.cs" />
     <Compile Include="Access\CDataAccess.cs" />
-    <Compile Include="Access\CDataDisAccess.cs" />
     <Compile Include="IFactoryIData.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
