--- a/UnserePL/KioskWarenVerwaltung/CompData/CompData.csproj
+++ b/UnserePL/KioskWarenVerwaltung/CompData/CompData.csproj
@@ -75,7 +75,7 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram2.cd" />
+    <None Include="ClassDiagramData.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
