--- a/UnserePL/KioskWarenVerwaltung/CompUI/CompUI.csproj
+++ b/UnserePL/KioskWarenVerwaltung/CompUI/CompUI.csproj
@@ -123,7 +123,7 @@
     </EmbeddedResource>
   </ItemGroup>
   <ItemGroup>
-    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagramUI.cd" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
