--- a/UnserePL/KioskWarenVerwaltung/TestApp/TestApp.csproj
+++ b/UnserePL/KioskWarenVerwaltung/TestApp/TestApp.csproj
@@ -108,7 +108,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
-    <None Include="ClassDiagram1.cd" />
+    <None Include="ClassDiagramTestApp.cd" />
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
       <LastGenOutput>Settings.Designer.cs</LastGenOutput>
